--- a/01-fundamentos-JS/Explorer_Int_HTML_CSS/Parte2/style.css
+++ b/01-fundamentos-JS/Explorer_Int_HTML_CSS/Parte2/style.css
@@ -62,8 +62,21 @@ section p {
 }
 
 button {
+    display: flex;
     text-transform: uppercase;
     font-family: "Open Sans", sans-serif;
+    background-color: #69B99D;
+    border-radius: 4px;
+    border: none;
+    padding: 14px 32px 15px;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    color: #fff;
+    cursor: pointer;
+}
+button:hover{
+    background-color: #3dba8e;
 }
 
 footer {
