--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
@@ -1,4 +1,27 @@
-h1 {
+body{
+    font-family: 'Poppins', sans-serif;
+    background: #E5E5E5;
+}
+
+body::before {
+    content: '';
+    width: 100%;
+    height: 368px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background: #121214;
+
+}
+
+.page{
+    width: 736px;
+    margin: auto;
+}
+
+header h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     font-size: 36px;
@@ -6,6 +29,8 @@ h1 {
     color: white;
 }
 
-body{
-    font-family: 'Poppins', sans-serif;
+header p {
+    font-size: 16px;
+    line-height: 26px;
+    color: #42D3FF;
 }
