--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
@@ -21,6 +21,11 @@ body::before {
     margin: auto;
 }
 
+header {
+    width: 319px;
+    margin-top: 74px;
+}
+
 header h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
@@ -33,4 +38,28 @@ header p {
     font-size: 16px;
     line-height: 26px;
     color: #42D3FF;
+}
+
+form {
+    background: #FAFAFC;
+    min-height: 300px;
+    margin-top: 38px;
+    border-radius: 8px;
+    padding: 64px;
+}
+
+fieldset {
+    border: none;
+
+}
+
+fieldset legend {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600px;
+    font-size: 24px;
+    line-height: 34px;
+
+    width: 100%;
+    border-bottom: 1px solid #E6E6F0;
+    padding-bottom: 16px;
 }
