--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
@@ -1,5 +1,14 @@
-body{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body, input, button, select, textarea {
     font-family: 'Poppins', sans-serif;
+}
+
+body{
     background: #E5E5E5;
 }
 
@@ -32,6 +41,8 @@ header h1 {
     font-size: 36px;
     line-height: 42px;
     color: white;
+
+    margin-bottom: 24px;
 }
 
 header p {
@@ -50,7 +61,6 @@ form {
 
 fieldset {
     border: none;
-
 }
 
 fieldset legend {
@@ -62,4 +72,42 @@ fieldset legend {
     width: 100%;
     border-bottom: 1px solid #E6E6F0;
     padding-bottom: 16px;
+}
+
+.input-wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.input-wrapper label {
+    font-size: 14px;
+    line-height: 24px;
+    color: #4E4958;
+
+    margin-bottom: 8px;
+}
+
+.input-wrapper label span {
+    margin-left: 12px;
+
+    font-size: 12px;
+    line-height: 20px;
+
+    color: #C1BCCC;
+}
+
+.input-wrapper input {
+    background: #FAFAFC;
+
+    border: 1px solid #E6E6F0;
+    border-radius: 8px;
+
+    height: 56px;
+    padding: 0 24px;
+
+    font-size: 16px;
+    line-height: 26px;
+
+    color: #C1BCCC;
+
 }
