--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
@@ -63,6 +63,12 @@ fieldset {
     border: none;
 }
 
+.fieldset-wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
 fieldset legend {
     font-family: 'Poppins', sans-serif;
     font-weight: 600px;
@@ -96,7 +102,11 @@ fieldset legend {
     color: #C1BCCC;
 }
 
-.input-wrapper input {
+.input-wrapper label span:hover {
+    color: #5f5c63;
+}
+
+.input-wrapper input, .input-wrapper textarea {
     background: #FAFAFC;
 
     border: 1px solid #E6E6F0;
@@ -110,4 +120,9 @@ fieldset legend {
 
     color: #C1BCCC;
 
+}
+
+.input-wrapper textarea {
+    padding: 0;
+    height: 168px;
 }
