--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
@@ -57,6 +57,10 @@ form {
     margin-top: 38px;
     border-radius: 8px;
     padding: 64px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
 }
 
 fieldset {
@@ -136,4 +140,13 @@ fieldset legend {
     background-image: url("data:image/svg+xml,%3Csvg width='10' height='6' viewBox='0 0 10 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L5 5L9 1' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
     background-position: right 24px top 50%;
+}
+
+.col-3{
+    display: flex;
+    gap: 16px;
+}
+
+.col-3 > div:nth-child(1){
+    width: 100%;
 }
