--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/style.css
@@ -55,7 +55,7 @@ form {
     background: #FAFAFC;
     min-height: 300px;
     margin-top: 38px;
-    border-radius: 8px;
+    border-radius: 8px 8px 0 0;
     padding: 64px;
 
     display: flex;
@@ -188,4 +188,32 @@ fieldset legend {
 
 .checkbox-wrapper input:focus + label::before {
     outline: 2px solid black;
+}
+
+footer{
+    background: #F0F0F4;
+    height: 136px;
+    display: flex;
+    flex-direction: column;
+    padding: 40px 64px;
+    margin-bottom: 100px;
+    border-top: 1px solid #D6D6D6;
+    border-radius: 0 0 8px 8px;
+}
+
+footer .button {
+    height: 56px;
+    border-radius: 8px;
+    background: #04D361;
+    border: 0;
+
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 26px;
+
+    color: #FFFFFF;
+}
+
+footer .button:hover{
+    background: #17b25d;
 }
