--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte3_ReforcResp/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte3_ReforcResp/style.css
@@ -14,6 +14,15 @@ body{
     color: #A54328;
     font-size: 1.6rem;
 }
+main {
+    max-width: 32rem;
+    margin-inline: auto;
+    padding: 5.6rem 4rem;
+    box-sizing: content-box;
+}
+img{
+    width: 100%;
+}
 
 button{
     font-family: 'Source Serif 4';
@@ -34,5 +43,4 @@ h2{
 p, li, strong {
     font-size: 1.4rem;
     line-height: 1.8rem;
-    background-color: aqua;
 }
