feat: ajustando espaços e preenchimentos css

--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte3_ReforcResp/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte3_ReforcResp/style.css
@@ -19,9 +19,14 @@ main {
     margin-inline: auto;
     padding: 5.6rem 4rem;
     box-sizing: content-box;
+
+    display: flex;
+    flex-direction: column;
+    gap: 3.2rem;
 }
 img{
     width: 100%;
+    margin-block: 3.2rem;
 }
 
 button{
@@ -32,15 +37,25 @@ button{
     border: 0;
     padding: 0.8rem 1.2rem;
     border-radius: 0.6rem;
-    margin-top: 1.8rem;
+    margin-top: 3.2rem;
 }
+
 h1, h2 {
     font-size: 2.8rem;
 }
-h2{
-    text-decoration: underline;
+
+main div:last-child h1{
+    margin-bottom: 3.2rem;
 }
 p, li, strong {
     font-size: 1.4rem;
     line-height: 1.8rem;
+}
+
+ul, ol {
+    padding-left: 2.4rem;
+}
+
+ul{
+    margin-bottom: 2.4rem;
 }
