--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte3_ReforcResp/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte3_ReforcResp/style.css
@@ -61,7 +61,17 @@ ul{
 }
 
 @media (min-width: 770px){
-    body{
-        color: red
+    main{
+        flex-direction: row;
+        max-width: fit-content;
+        gap: 16rem;
+    }
+
+    .recipe {
+        max-width: 43.5rem;
+    }
+
+    .ingredients{
+        max-width: 52.5rem;
     }
 }
