--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte3_ReforcResp/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte3_ReforcResp/style.css
@@ -41,15 +41,16 @@ button{
 }
 
 h1, h2 {
-    font-size: 2.8rem;
+    font-size: clamp(2.8rem, 2vw + 1rem, 4rem);
+    line-height: clamp(1.8rem, 1vw + 1rem, 2.5rem);
 }
 
 main div:last-child h1{
     margin-bottom: 3.2rem;
 }
 p, li, strong {
-    font-size: 1.4rem;
-    line-height: 1.8rem;
+    font-size: clamp(1.4rem, 1vw + 0.4rem, 2rem);
+    line-height: clamp(1.8rem, 1vw + 1rem, 2.5rem);
 }
 
 ul, ol {
@@ -65,6 +66,7 @@ ul{
         flex-direction: row;
         max-width: fit-content;
         gap: 16rem;
+        padding: 9rem;
     }
 
     .recipe {
@@ -74,16 +76,16 @@ ul{
     .ingredients{
         max-width: 52.5rem;
     }
-
+/* 
     h1, h2 {
-        font-size: 4rem;
-        line-height: 2.5rem;
+        font-size: clamp(2.8rem, 2vw + 1rem, 4rem);
+    line-height: clamp(1.8rem, 1vw + 1rem, 2.5rem);
     }
 
     p, li, strong {
-        font-size: 2rem;
-        line-height: 2.5rem;
-    }
+        font-size: clamp(1.4rem, 1vw + 0.4rem, 2rem);
+    line-height: clamp(1.8rem, 1vw + 1rem, 2.5rem);
+    } */
 
     button {
         padding: 1rem 2rem;
