--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte4_Grid_Galaxies/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte4_Grid_Galaxies/style.css
@@ -24,9 +24,11 @@ div:nth-child(1){
 div:nth-child(2){
     grid-column:1/3;
 }
-div:nth-child(4){
+div:nth-child(3){
     grid-column:1/2;
+    grid-row: 3/5;
 }
-div:nth-child(5){
+div:nth-child(4){
     grid-column:1/3;
 }
+
