--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte4_Grid_Galaxies/style.css
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte4_Grid_Galaxies/style.css
@@ -6,3 +6,24 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+body{
+    background-color: #121214;
+}
+
+.card{
+    background-color: #202024;
+    border: 2px solid #323238;
+    border-radius: 8px;
+}
+
+.card h2{
+    color: #E1E1E6;
+    font-weight: 900;
+    font-size: 36px;
+}
+.card p {
+    color: #C4C4CC;
+    font-size: 18px;
+    font-weight: 600;
+}
